--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <body>
+    <!-- the entire body must be written by student -->
+    <h3>
+      Please click on the identical tiles to verify that you are not a robot
+    </h3>
+    <div id="main"></div>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
